# dinero

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SKILL.md  Taskfile.yml  config.sample.toml  justfile  pyproject.toml
.github/workflows/: release.yml
.opencode/commands/: parse-statement.md
dashboards/: accounts.sample.yml  balances.py
docs/: README.md
docs/samples/: sample-plaid-transaction.json
scripts/: config.py  mkdataset.py  rules.py  transactions.py
src/dinero/: analysis.py  application.py  db.py  nocodb.py  plaid.py  rules.py
src/dinero/cli/: cache.py  db.py  import_csv.py  main.py  mkdataset.py  mkrules.py  rules.py  search.py  transactions.py  utils.py
src/dinero/config/: config_file.py  model.py
src/dinero/utils/: base.py  fs.py
