[project]
name = "dinero"
description = "Money tracking tools"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = []
authors = [{ name = "Daniel Rodriguez", email = "daniel@danielfrg.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jupyterlab>=3.4.5",
  "kani-highcharts>=0.1.4",
  "pandas>=2.0.0",
  "pendulum~=3.0.0a1",
  "plaid-python>=7.5.0, <8",
  "pydantic>=1.10.0, <2.0.0",
  "structlog>=21.1.0, <22",
  "tomli_w>=1.0.0",
  "nocodb>=1.0.1",
  "sqlalchemy>=2.0.21",
  "platformdirs>=3.10.0",
]
dynamic = ["version"]

[tool.rye]
managed = true
dev-dependencies = [
  "black~=23.3.0",
  "hatch~=1.7.0",
  "ipython~=8.12.0",
  "isort~=5.12.0",
  "mypy~=1.2.0",
  "ruff~=0.0.262",
  "pip-tools",
]

[tool.hatch.version]
path = "src/dinero/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/danielfrg/dinero#readme"
Issues = "https://github.com/danielfrg/dinero/issues"
Source = "https://github.com/danielfrg/dinero"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
